[package]
name = "tweaker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.214"
serde_json = "1.0.132"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Element", "ScrollToOptions"] }
serde-wasm-bindgen = "0.6.5"
num-format = "0.4.4"
wasm-bindgen = "0.2.95"
libsecp256k1 = "0.7.1"
hex = "0.4.3"
base58 = "0.2.0"
sha2 = "0.10.8"
copypasta = "0.10.1"
